--- a/app/src/main/res/layout/activity_quiz.xml
+++ b/app/src/main/res/layout/activity_quiz.xml
@@ -3,12 +3,10 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:background="@color/colorbackground"
     android:layout_height="match_parent"
-    xmlns:custom="http://schemas.android.com/apk/res-auto"
     xmlns:htext="http://schemas.android.com/apk/res-auto"
-    tools:context="com.agni.asus.quiz.Question_Answer">
-
+    xmlns:custom="http://schemas.android.com/apk/res-auto"
+    tools:context="com.agni.asus.quiz.QuizActivity">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="50dp"
@@ -34,12 +32,12 @@
             android:text="Difficulty"
             htext:animateType="typer" />
     </LinearLayout>
-
     <LinearLayout
         android:paddingTop="20dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="50dp"
+        android:id="@+id/questn_layout"
         android:orientation="horizontal">
 
         <ImageView
@@ -64,15 +62,33 @@
             android:textAppearance="@style/TextAppearance.AppCompat.Body1"
             android:textSize="20sp" />
     </LinearLayout>
-
-    <com.victor.loading.book.BookLoading
-        android:id="@+id/book_loading"
-        android:layout_width="150dp"
-        android:layout_height="100dp"
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true">
-
-    </com.victor.loading.book.BookLoading>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="100dp"
+        android:layout_below="@+id/questn_layout"
+        android:orientation="vertical">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="optn1"
+            android:id="@+id/option1"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="optn2"
+            android:id="@+id/option2"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="optn3"
+            android:id="@+id/option3"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="optn4"
+            android:id="@+id/option4"/>
+    </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -117,39 +133,6 @@
             custom:pb_textComplete="Success"
             custom:pb_textError="Error"
             custom:pb_textProgress="Loading" />
-    </LinearLayout>
-
-    <com.wang.avi.AVLoadingIndicatorView
-        android:id="@+id/loading_indicator"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:layout_above="@+id/book_loading"
-        android:layout_centerHorizontal="true"
-        app:indicatorColor="@color/blue_normal"
-        app:indicatorName="BallPulseSyncIndicator" />
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
-        android:orientation="horizontal">
-        <ImageView
-            android:id="@+id/tick_image"
-            android:layout_width="60dp"
-            android:padding="10dp"
-            android:layout_height="60dp"
-            android:src="@drawable/ic_ticks_39830"
-            android:layout_gravity="center_vertical"/>
-
-        <TextView
-            android:id="@+id/answer_view"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:hint="ANSWER"
-            android:text="Answer"
-            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-            android:textSize="20sp" />
     </LinearLayout>
 
 </RelativeLayout>
