--- a/app/src/main/res/values/difficulty_values.xml
+++ b/app/src/main/res/values/difficulty_values.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string-array name="difficulty_list">
-        <item>Any</item>
+        <item>Any Difficulty</item>
         <item>Easy</item>
         <item>Medium</item>
         <item>Hard</item>
