--- a/app/src/main/res/layout/activity_quiz.xml
+++ b/app/src/main/res/layout/activity_quiz.xml
@@ -9,7 +9,7 @@
     tools:context="com.agni.asus.quiz.QuizActivity">
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="50dp"
+        android:layout_height="60dp"
         android:layout_marginVertical="10dp"
         android:layout_alignParentTop="true"
         android:orientation="vertical"
@@ -19,7 +19,7 @@
         <com.hanks.htextview.HTextView
             android:id="@+id/category"
             android:layout_width="match_parent"
-            android:layout_height="25dp"
+            android:layout_height="20dp"
             android:text="Category"
             android:textAlignment="center"
             htext:animateType="typer" />
@@ -27,10 +27,17 @@
         <com.hanks.htextview.HTextView
             android:id="@+id/difficulty"
             android:layout_width="match_parent"
-            android:layout_height="25dp"
+            android:layout_height="20dp"
             android:textAlignment="center"
             android:text="Difficulty"
             htext:animateType="typer" />
+
+        <com.daasuu.cat.CountAnimationTextView
+            android:id="@+id/current_count"
+            android:layout_width="match_parent"
+            android:textAlignment="center"
+            android:layout_height="20dp"
+            android:text="0" />
     </LinearLayout>
     <LinearLayout
         android:paddingTop="20dp"
@@ -68,26 +75,46 @@
         android:layout_marginTop="100dp"
         android:layout_below="@+id/questn_layout"
         android:orientation="vertical">
+
         <TextView
+            android:id="@+id/option1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:fontFamily="serif"
             android:text="optn1"
-            android:id="@+id/option1"/>
+            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+            android:textSize="20sp"
+            android:typeface="normal" />
+
         <TextView
+            android:id="@+id/option2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:fontFamily="serif"
             android:text="optn2"
-            android:id="@+id/option2"/>
+            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+            android:textSize="20sp"
+            android:typeface="normal" />
+
         <TextView
+            android:id="@+id/option3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:fontFamily="serif"
             android:text="optn3"
-            android:id="@+id/option3"/>
+            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+            android:textSize="20sp"
+            android:typeface="normal" />
+
         <TextView
+            android:id="@+id/option4"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:fontFamily="serif"
             android:text="optn4"
-            android:id="@+id/option4"/>
+            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+            android:textSize="20sp"
+            android:typeface="normal" />
     </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
@@ -95,25 +122,24 @@
         android:orientation="horizontal"
         android:layout_alignParentBottom="true"
         android:id="@+id/linearLayout">
-        <com.dd.processbutton.iml.ActionProcessButton
-            android:id="@+id/previous"
-            android:layout_weight="1"
-            android:layout_margin="2dp"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentStart="true"
-            android:text="Previous"
-            android:textColor="@android:color/white"
-            android:textSize="18sp"
-            custom:pb_colorComplete="@color/green_complete"
-            custom:pb_colorError="@color/red_error"
-            custom:pb_colorNormal="@color/blue_normal"
-            custom:pb_colorPressed="@color/blue_pressed"
-            custom:pb_colorProgress="@color/purple_progress"
-            custom:pb_textComplete="Success"
-            custom:pb_textError="Error"
-            custom:pb_textProgress="Loading" />
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:layout_weight="1">
+            <TextView
+                android:gravity="center_horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:text="Next question in"
+                android:layout_weight="1"/>
+            <com.daasuu.cat.CountAnimationTextView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="center_horizontal"
+                android:id="@+id/next_qstn_in"
+                android:layout_weight="1"/>
+        </LinearLayout>
         <com.dd.processbutton.iml.ActionProcessButton
             android:id="@+id/next"
             android:layout_weight="1"
