--- a/app/src/main/res/layout/activity_quiz.xml
+++ b/app/src/main/res/layout/activity_quiz.xml
@@ -7,6 +7,21 @@
     xmlns:htext="http://schemas.android.com/apk/res-auto"
     xmlns:custom="http://schemas.android.com/apk/res-auto"
     tools:context="com.agni.asus.quiz.QuizActivity">
+
+    <com.hanks.htextview.HTextView
+        android:id="@+id/display_current_score_final"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/questn_layout"
+        android:layout_marginTop="20dp"
+        android:fontFamily="serif"
+        android:text="Final Points"
+        android:textAlignment="center"
+        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+        android:textSize="24sp"
+        android:typeface="normal"
+        htext:animateType="typer" />
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="60dp"
@@ -44,6 +59,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="50dp"
+        android:layout_marginHorizontal="5dp"
         android:id="@+id/questn_layout"
         android:orientation="horizontal">
 
@@ -69,52 +85,118 @@
             android:textAppearance="@style/TextAppearance.AppCompat.Body1"
             android:textSize="20sp" />
     </LinearLayout>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="100dp"
         android:layout_below="@+id/questn_layout"
+        android:layout_marginHorizontal="5dp"
+        android:layout_marginTop="50dp"
         android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/option1"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:fontFamily="serif"
-            android:text="optn1"
-            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-            android:textSize="20sp"
-            android:typeface="normal" />
+            android:orientation="horizontal">
 
-        <TextView
-            android:id="@+id/option2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:fontFamily="serif"
-            android:text="optn2"
-            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-            android:textSize="20sp"
-            android:typeface="normal" />
+            <ImageView
+                android:paddingLeft="14dp"
+                android:id="@+id/img1"
+                android:layout_marginVertical="2dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:src="@drawable/ic_survey_2316468" />
+            <TextView
+                android:layout_gravity="center_vertical"
+                android:layout_marginLeft="9dp"
+                android:id="@+id/option1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="serif"
+                android:text="optn1"
+                android:padding="6dp"
+                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+                android:textSize="20sp"
+                android:typeface="normal" />
+        </LinearLayout>
 
-        <TextView
-            android:id="@+id/option3"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:fontFamily="serif"
-            android:text="optn3"
-            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-            android:textSize="20sp"
-            android:typeface="normal" />
+            android:orientation="horizontal">
+            <ImageView
+                android:paddingLeft="14dp"
+                android:id="@+id/img2"
+                android:layout_marginVertical="2dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_survey_2316468"
+                android:layout_gravity="center_vertical"/>
+            <TextView
+                android:layout_gravity="center_vertical"
+                android:layout_marginLeft="9dp"
+                android:id="@+id/option2"
+                android:padding="6dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="serif"
+                android:text="optn2"
+                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+                android:textSize="20sp"
+                android:typeface="normal" />
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+            <ImageView
+                android:id="@+id/img3"
+                android:paddingLeft="14dp"
+                android:layout_marginVertical="2dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_survey_2316468"
+                android:layout_gravity="center_vertical"/>
+            <TextView
+                android:layout_gravity="center_vertical"
+                android:layout_marginLeft="9dp"
+                android:id="@+id/option3"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="serif"
+                android:padding="6dp"
+                android:text="optn3"
+                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+                android:textSize="20sp"
+                android:typeface="normal" />
+        </LinearLayout>
 
-        <TextView
-            android:id="@+id/option4"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:fontFamily="serif"
-            android:text="optn4"
-            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-            android:textSize="20sp"
-            android:typeface="normal" />
+            android:orientation="horizontal">
+            <ImageView
+                android:layout_marginVertical="2dp"
+                android:id="@+id/img4"
+                android:paddingLeft="14dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_survey_2316468"
+                android:layout_gravity="center_vertical"/>
+            <TextView
+                android:layout_gravity="center_vertical"
+                android:layout_marginLeft="9dp"
+                android:id="@+id/option4"
+                android:padding="6dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="serif"
+                android:text="optn4"
+                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+                android:textSize="20sp"
+                android:typeface="normal" />
+        </LinearLayout>
     </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
