--- a/app/src/main/res/layout/activity_first_time.xml
+++ b/app/src/main/res/layout/activity_first_time.xml
@@ -11,11 +11,11 @@
         android:id="@+id/textView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_alignStart="@+id/editText"
-        android:layout_marginTop="140dp"
+        android:layout_marginTop="164dp"
         android:fontFamily="serif"
-        android:text="Enter Display name"
+        android:text="Enter Name"
         android:textAlignment="center"
         android:textAppearance="@style/TextAppearance.AppCompat.Large.Inverse"
         android:typeface="normal" />
@@ -29,17 +29,19 @@
         android:layout_marginTop="19dp"
         android:fontFamily="serif"
         android:singleLine="false"
+        android:hint="What should we call you !"
         android:textAppearance="@style/TextAppearance.AppCompat.Large.Inverse"
         android:typeface="normal"
+        android:gravity="center"
         android:id="@+id/editText" />
 
     <com.dd.processbutton.iml.ActionProcessButton
         android:id="@+id/ok_btn"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignStart="@+id/skip_btn"
+        android:layout_alignParentStart="true"
         android:layout_below="@+id/editText"
-        android:layout_marginTop="23dp"
+        android:layout_marginTop="60dp"
         android:fontFamily="serif"
         android:text="OK"
         android:textAppearance="@style/TextAppearance.AppCompat.Headline"
