Actionbar customization done

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,6 +12,8 @@
         android:id="@+id/htextview"
         android:layout_width="match_parent"
         android:layout_height="100dp"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/textViewMyMessage"
         android:fontFamily="serif"
         android:gravity="center"
         android:textAlignment="center"
@@ -59,8 +61,8 @@
             android:textSize="18sp"
             custom:pb_colorComplete="@color/green_complete"
             custom:pb_colorError="@color/red_error"
-            custom:pb_colorNormal="@color/blue_normal"
-            custom:pb_colorPressed="@color/blue_pressed"
+            custom:pb_colorNormal="@color/button_normal"
+            custom:pb_colorPressed="@color/button_pressed"
             custom:pb_colorProgress="@color/purple_progress"
             custom:pb_textComplete="Success"
             custom:pb_textError="Error"
@@ -78,8 +80,8 @@
             android:textSize="18sp"
             custom:pb_colorComplete="@color/green_complete"
             custom:pb_colorError="@color/red_error"
-            custom:pb_colorNormal="@color/blue_normal"
-            custom:pb_colorPressed="@color/blue_pressed"
+            custom:pb_colorNormal="@color/button_normal"
+            custom:pb_colorPressed="@color/button_pressed"
             custom:pb_colorProgress="@color/purple_progress"
             custom:pb_textComplete="Success"
             custom:pb_textError="Error"
