--- a/app/src/main/res/layout/activity_quiz.xml
+++ b/app/src/main/res/layout/activity_quiz.xml
@@ -22,46 +22,17 @@
         android:textSize="24sp"
         android:typeface="normal"
         htext:animateType="typer" />
+
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="60dp"
-        android:layout_marginVertical="10dp"
-        android:layout_alignParentTop="true"
-        android:orientation="vertical"
-        android:layout_marginBottom="20dp"
-        android:layout_centerHorizontal="true">
-
-        <com.hanks.htextview.HTextView
-            android:id="@+id/category"
-            android:layout_width="match_parent"
-            android:layout_height="20dp"
-            android:text="Category"
-            android:textAlignment="center"
-            htext:animateType="typer" />
-
-        <com.hanks.htextview.HTextView
-            android:id="@+id/difficulty"
-            android:layout_width="match_parent"
-            android:layout_height="20dp"
-            android:textAlignment="center"
-            android:text="Difficulty"
-            htext:animateType="typer" />
-
-        <com.daasuu.cat.CountAnimationTextView
-            android:id="@+id/current_count"
-            android:layout_width="match_parent"
-            android:textAlignment="center"
-            android:layout_height="20dp"
-            android:text="0" />
-    </LinearLayout>
-    <LinearLayout
-        android:paddingTop="20dp"
+        android:id="@+id/questn_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="50dp"
+        android:layout_alignParentTop="true"
+        android:layout_alignStart="@+id/linearLayout2"
         android:layout_marginHorizontal="5dp"
-        android:id="@+id/questn_layout"
-        android:orientation="horizontal">
+        android:layout_marginTop="11dp"
+        android:orientation="horizontal"
+        android:paddingTop="20dp">
 
         <ImageView
             android:id="@+id/q_mark_imgvw"
@@ -77,9 +48,9 @@
             android:id="@+id/question_view"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
             android:layout_marginHorizontal="15dp"
             android:gravity="center_vertical"
-            android:layout_gravity="center_vertical"
             android:hint="QUESTION"
             android:text="Question"
             android:textAppearance="@style/TextAppearance.AppCompat.Body1"
@@ -92,7 +63,8 @@
         android:layout_below="@+id/questn_layout"
         android:layout_marginHorizontal="5dp"
         android:layout_marginTop="50dp"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:id="@+id/linearLayout2">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -119,6 +91,13 @@
                 android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                 android:textSize="20sp"
                 android:typeface="normal" />
+            <ImageView
+                android:id="@+id/tick1"
+                android:paddingLeft="8sp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:src="@drawable/ic_ticks_39830"/>
         </LinearLayout>
 
         <LinearLayout
@@ -145,6 +124,13 @@
                 android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                 android:textSize="20sp"
                 android:typeface="normal" />
+            <ImageView
+                android:id="@+id/tick2"
+                android:paddingLeft="8sp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:src="@drawable/ic_ticks_39830"/>
         </LinearLayout>
         <LinearLayout
             android:layout_width="match_parent"
@@ -170,6 +156,13 @@
                 android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                 android:textSize="20sp"
                 android:typeface="normal" />
+            <ImageView
+                android:id="@+id/tick3"
+                android:paddingLeft="8sp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:src="@drawable/ic_ticks_39830"/>
         </LinearLayout>
 
         <LinearLayout
@@ -196,6 +189,13 @@
                 android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                 android:textSize="20sp"
                 android:typeface="normal" />
+            <ImageView
+                android:id="@+id/tick4"
+                android:layout_width="wrap_content"
+                android:paddingLeft="8sp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:src="@drawable/ic_ticks_39830"/>
         </LinearLayout>
     </LinearLayout>
     <LinearLayout
@@ -237,8 +237,8 @@
             android:textSize="18sp"
             custom:pb_colorComplete="@color/green_complete"
             custom:pb_colorError="@color/red_error"
-            custom:pb_colorNormal="@color/blue_normal"
-            custom:pb_colorPressed="@color/blue_pressed"
+            custom:pb_colorNormal="@color/button_normal"
+            custom:pb_colorPressed="@color/button_pressed"
             custom:pb_colorProgress="@color/purple_progress"
             custom:pb_textComplete="Success"
             custom:pb_textError="Error"
@@ -250,7 +250,7 @@
         android:layout_height="40dp"
         android:layout_above="@+id/book_loading"
         android:layout_centerHorizontal="true"
-        app:indicatorColor="@color/blue_normal"
+        app:indicatorColor="@color/avloading"
         app:indicatorName="BallPulseSyncIndicator" />
     <com.victor.loading.book.BookLoading
         android:id="@+id/book_loading"
@@ -258,5 +258,9 @@
         android:layout_height="100dp"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"/>
+    <nl.dionsegijn.konfetti.KonfettiView
+        android:id="@+id/viewKonfetti"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 
 </RelativeLayout>
