--- a/app/src/main/res/layout/activity_question__answer.xml
+++ b/app/src/main/res/layout/activity_question__answer.xml
@@ -6,41 +6,14 @@
     android:background="@color/colorbackground"
     android:layout_height="match_parent"
     xmlns:custom="http://schemas.android.com/apk/res-auto"
-    xmlns:htext="http://schemas.android.com/apk/res-auto"
     tools:context="com.agni.asus.quiz.Question_Answer">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:layout_marginVertical="10dp"
-        android:layout_alignParentTop="true"
-        android:orientation="vertical"
-        android:layout_marginBottom="20dp"
-        android:layout_centerHorizontal="true">
-
-        <com.hanks.htextview.HTextView
-            android:id="@+id/category"
-            android:layout_width="match_parent"
-            android:layout_height="25dp"
-            android:text="Category"
-            android:textAlignment="center"
-            htext:animateType="typer" />
-
-        <com.hanks.htextview.HTextView
-            android:id="@+id/difficulty"
-            android:layout_width="match_parent"
-            android:layout_height="25dp"
-            android:textAlignment="center"
-            android:text="Difficulty"
-            htext:animateType="typer" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:paddingTop="20dp"
-        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="50dp"
-        android:orientation="horizontal">
+        android:layout_alignParentTop="true"
+        android:orientation="horizontal"
+        android:paddingTop="20dp">
 
         <ImageView
             android:id="@+id/q_mark_imgvw"
@@ -56,9 +29,9 @@
             android:id="@+id/question_view"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
             android:layout_marginHorizontal="15dp"
             android:gravity="center_vertical"
-            android:layout_gravity="center_vertical"
             android:hint="QUESTION"
             android:text="Question"
             android:textAppearance="@style/TextAppearance.AppCompat.Body1"
@@ -92,8 +65,8 @@
             android:textSize="18sp"
             custom:pb_colorComplete="@color/green_complete"
             custom:pb_colorError="@color/red_error"
-            custom:pb_colorNormal="@color/blue_normal"
-            custom:pb_colorPressed="@color/blue_pressed"
+            custom:pb_colorNormal="@color/button_normal"
+            custom:pb_colorPressed="@color/button_pressed"
             custom:pb_colorProgress="@color/purple_progress"
             custom:pb_textComplete="Success"
             custom:pb_textError="Error"
@@ -111,8 +84,8 @@
             android:textSize="18sp"
             custom:pb_colorComplete="@color/green_complete"
             custom:pb_colorError="@color/red_error"
-            custom:pb_colorNormal="@color/blue_normal"
-            custom:pb_colorPressed="@color/blue_pressed"
+            custom:pb_colorNormal="@color/button_normal"
+            custom:pb_colorPressed="@color/button_pressed"
             custom:pb_colorProgress="@color/purple_progress"
             custom:pb_textComplete="Success"
             custom:pb_textError="Error"
@@ -125,7 +98,7 @@
         android:layout_height="40dp"
         android:layout_above="@+id/book_loading"
         android:layout_centerHorizontal="true"
-        app:indicatorColor="@color/blue_normal"
+        app:indicatorColor="@color/avloading"
         app:indicatorName="BallPulseSyncIndicator" />
 
     <LinearLayout
