--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,12 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#E58F65</color>
-    <color name="colorPrimaryDark">#D05353</color>
-    <color name="colorAccent">#F1E8B8</color>
-    <color name="colorText">#000000</color>
+    <color name="colorPrimary">#F44336</color>
+    <color name="colorPrimaryDark">#D32F2F</color>
+    <color name="colorAccent">#FF5722</color>
     <color name="colorStatusBar">#D05353</color>
     <color name="colorbackground">#EEEEEE</color>
     <color name="book_loading_background">#EEEEEE</color>
-    <color name="book_loading_book">#ff33b5e5</color>
+    <color name="book_loading_book">#D32F2F</color>
     <color name="book_loading_page">#ffffff</color>
+    <color name="correct_ans_bg">#009900</color>
+    <color name="primary_light">#FFCDD2</color>
+    <color name="primary_text">#212121</color>
+    <color name="secondary_text">#757575</color>
+    <color name="icons">#FFFFFF</color>
+    <color name="divider">#BDBDBD</color>
+    <color name="button_normal">#F44336</color>
+    <color name="button_pressed">#D32F2F</color>
+    <color name="spinner_text">#757575</color>
+    <color name="avloading">#D32F2F</color>
 </resources>
