--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,17 +3,20 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:custom="http://schemas.android.com/apk/res-auto"
+    xmlns:fancy="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorbackground"
+    android:background="@color/viewcolor"
+    android:layout_margin="8dp"
+    android:elevation="4dp"
     tools:context="com.agni.asus.quiz.MainActivity">
 
     <com.hanks.htextview.HTextView
         android:id="@+id/htextview"
         android:layout_width="match_parent"
-        android:layout_height="100dp"
+        android:layout_height="80dp"
         android:layout_alignParentStart="true"
-        android:layout_below="@+id/textViewMyMessage"
+        android:layout_alignParentTop="true"
         android:fontFamily="serif"
         android:gravity="center"
         android:textAlignment="center"
@@ -44,48 +47,43 @@
         android:typeface="normal" />
 
     <LinearLayout
+        android:id="@+id/bottom_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
+        android:layout_marginBottom="5dp"
         android:layout_alignParentBottom="true">
-        <com.dd.processbutton.iml.ActionProcessButton
+
+        <mehdi.sakout.fancybuttons.FancyButton
             android:id="@+id/question_answer"
             android:layout_weight="1"
-            android:layout_margin="2dp"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentStart="true"
             android:text="Q&amp;A"
+            android:layout_margin="5dp"
             android:textColor="@android:color/white"
             android:textSize="18sp"
-            custom:pb_colorComplete="@color/green_complete"
-            custom:pb_colorError="@color/red_error"
-            custom:pb_colorNormal="@color/button_normal"
-            custom:pb_colorPressed="@color/button_pressed"
-            custom:pb_colorProgress="@color/purple_progress"
-            custom:pb_textComplete="Success"
-            custom:pb_textError="Error"
-            custom:pb_textProgress="Loading" />
-        <com.dd.processbutton.iml.ActionProcessButton
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            fancy:fb_defaultColor="@color/button_normal"
+            fancy:fb_borderColor="#FFFFFF"
+            fancy:fb_borderWidth="1dp"
+            android:elevation="4dp"
+            fancy:fb_focusColor="@color/button_pressed"
+            fancy:fb_radius="30dp"/>
+        <mehdi.sakout.fancybuttons.FancyButton
             android:id="@+id/quiz_start"
             android:layout_weight="1"
-            android:layout_margin="2dp"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentStart="true"
-            android:text="Start Quiz"
+            android:text="START QUIZ"
+            android:elevation="4dp"
+            android:layout_margin="5dp"
             android:textColor="@android:color/white"
             android:textSize="18sp"
-            custom:pb_colorComplete="@color/green_complete"
-            custom:pb_colorError="@color/red_error"
-            custom:pb_colorNormal="@color/button_normal"
-            custom:pb_colorPressed="@color/button_pressed"
-            custom:pb_colorProgress="@color/purple_progress"
-            custom:pb_textComplete="Success"
-            custom:pb_textError="Error"
-            custom:pb_textProgress="Loading" />
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            fancy:fb_defaultColor="@color/button_normal"
+            fancy:fb_borderColor="#FFFFFF"
+            fancy:fb_borderWidth="1dp"
+            fancy:fb_focusColor="@color/button_pressed"
+            fancy:fb_radius="30dp"/>
     </LinearLayout>
 
 </RelativeLayout>
