--- a/app/src/main/res/layout/activity_question__answer.xml
+++ b/app/src/main/res/layout/activity_question__answer.xml
@@ -2,41 +2,81 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:fancy="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:background="@color/colorbackground"
     android:layout_height="match_parent"
     xmlns:custom="http://schemas.android.com/apk/res-auto"
     tools:context="com.agni.asus.quiz.Question_Answer">
 
-    <LinearLayout
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:orientation="horizontal"
-        android:paddingTop="20dp">
-
-        <ImageView
-            android:id="@+id/q_mark_imgvw"
-            android:layout_width="49dp"
-            android:layout_height="61dp"
-            android:layout_above="@+id/question_view"
-            android:layout_alignParentStart="true"
-            android:padding="10dp"
-            android:src="@drawable/ic_the_question_mark_350169"
-            android:visibility="visible" />
-
-        <TextView
-            android:id="@+id/question_view"
+        android:layout_height="match_parent"
+        android:layout_above="@id/linearLayout">
+        <LinearLayout
+            android:id="@+id/q_a_view"
+            android:elevation="4dp"
+            android:orientation="vertical"
+            android:background="@color/viewcolor"
+            android:layout_margin="10dp"
+            android:paddingVertical="8dp"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:layout_marginHorizontal="15dp"
-            android:gravity="center_vertical"
-            android:hint="QUESTION"
-            android:text="Question"
-            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-            android:textSize="20sp" />
-    </LinearLayout>
+            android:layout_height="match_parent">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:padding="15dp"
+                android:paddingTop="20dp">
+
+                <ImageView
+                    android:id="@+id/q_mark_imgvw"
+                    android:layout_width="49dp"
+                    android:layout_height="61dp"
+                    android:layout_above="@+id/question_view"
+                    android:layout_alignParentStart="true"
+                    android:padding="10dp"
+                    android:src="@drawable/ic_the_question_mark_350169"
+                    android:visibility="visible" />
+
+                <TextView
+                    android:id="@+id/question_view"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:layout_marginHorizontal="15dp"
+                    android:gravity="center_vertical"
+                    android:hint="QUESTION"
+                    android:text="Question"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+                    android:textSize="20sp" />
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="15dp"
+                android:orientation="horizontal">
+                <ImageView
+                    android:id="@+id/tick_image"
+                    android:layout_width="60dp"
+                    android:padding="10dp"
+                    android:layout_height="60dp"
+                    android:src="@drawable/ic_ticks_39830"
+                    android:layout_gravity="center_vertical"/>
+
+                <TextView
+                    android:id="@+id/answer_view"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:hint="ANSWER"
+                    android:text="Answer"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+                    android:textSize="20sp" />
+            </LinearLayout>
+        </LinearLayout>
+    </ScrollView>
+
 
     <com.victor.loading.book.BookLoading
         android:id="@+id/book_loading"
@@ -52,44 +92,36 @@
         android:orientation="horizontal"
         android:layout_alignParentBottom="true"
         android:id="@+id/linearLayout">
-        <com.dd.processbutton.iml.ActionProcessButton
+        <mehdi.sakout.fancybuttons.FancyButton
             android:id="@+id/previous"
             android:layout_weight="1"
-            android:layout_margin="2dp"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentStart="true"
             android:text="Previous"
+            android:elevation="4dp"
+            android:layout_margin="5dp"
             android:textColor="@android:color/white"
             android:textSize="18sp"
-            custom:pb_colorComplete="@color/green_complete"
-            custom:pb_colorError="@color/red_error"
-            custom:pb_colorNormal="@color/button_normal"
-            custom:pb_colorPressed="@color/button_pressed"
-            custom:pb_colorProgress="@color/purple_progress"
-            custom:pb_textComplete="Success"
-            custom:pb_textError="Error"
-            custom:pb_textProgress="Loading" />
-        <com.dd.processbutton.iml.ActionProcessButton
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            fancy:fb_defaultColor="@color/button_normal"
+            fancy:fb_borderColor="#FFFFFF"
+            fancy:fb_borderWidth="1dp"
+            fancy:fb_focusColor="@color/button_pressed"
+            fancy:fb_radius="30dp"/>
+        <mehdi.sakout.fancybuttons.FancyButton
             android:id="@+id/next"
             android:layout_weight="1"
-            android:layout_margin="2dp"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentStart="true"
             android:text="Next"
+            android:elevation="4dp"
+            android:layout_margin="5dp"
             android:textColor="@android:color/white"
             android:textSize="18sp"
-            custom:pb_colorComplete="@color/green_complete"
-            custom:pb_colorError="@color/red_error"
-            custom:pb_colorNormal="@color/button_normal"
-            custom:pb_colorPressed="@color/button_pressed"
-            custom:pb_colorProgress="@color/purple_progress"
-            custom:pb_textComplete="Success"
-            custom:pb_textError="Error"
-            custom:pb_textProgress="Loading" />
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            fancy:fb_defaultColor="@color/button_normal"
+            fancy:fb_borderColor="#FFFFFF"
+            fancy:fb_borderWidth="1dp"
+            fancy:fb_focusColor="@color/button_pressed"
+            fancy:fb_radius="30dp"/>
     </LinearLayout>
 
     <com.wang.avi.AVLoadingIndicatorView
@@ -101,28 +133,6 @@
         app:indicatorColor="@color/avloading"
         app:indicatorName="BallPulseSyncIndicator" />
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
-        android:orientation="horizontal">
-        <ImageView
-            android:id="@+id/tick_image"
-            android:layout_width="60dp"
-            android:padding="10dp"
-            android:layout_height="60dp"
-            android:src="@drawable/ic_ticks_39830"
-            android:layout_gravity="center_vertical"/>
 
-        <TextView
-            android:id="@+id/answer_view"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:hint="ANSWER"
-            android:text="Answer"
-            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-            android:textSize="20sp" />
-    </LinearLayout>
 
 </RelativeLayout>
