--- a/app/src/main/res/layout/activity_quiz.xml
+++ b/app/src/main/res/layout/activity_quiz.xml
@@ -244,6 +244,7 @@
             android:id="@+id/next"
             android:layout_weight="1"
             android:text="Next"
+            android:elevation="2dp"
             android:layout_margin="5dp"
             android:textColor="@android:color/white"
             android:textSize="18sp"
